# kotlin-interpreter-rs

./: .gitignore  Cargo.toml  README.md
examples/: Fibonacci.kt
examples/tests/: test_file_10.kt  test_file_2.kt  test_file_3.kt  test_file_4.kt  test_file_5.kt  test_file_6.kt  test_file_7.kt  test_file_8.kt  test_file_9.kt
src/: errors.rs  experiments.rs  lib.rs  parser.rs  source.rs  source_code.rs  source_cursor.rs  test_utils.rs  token.rs  token_stream.rs  tokenizer.rs
src/analyzer/: ast.rs  display_ast.rs  expr_to_ast.rs  mod.rs  modifiers.rs  mutable_tree_visitor.rs  tree_to_ast.rs  type_parameters.rs
src/analyzer/semantic_rules/: mod.rs  modifiers.rs  type_reference_getter.rs
src/analyzer/typechecker/: collect_file_info.rs  collect_file_symbols.rs  compiler.rs  mod.rs  resolve_imports.rs  type_info_collector.rs  type_reference_getter.rs  type_resolver.rs
src/interpreter/: ast_walker.rs  bytecode.rs  mod.rs  value.rs  vm.rs
src/parser/: ast.rs  display.rs  file.rs  mod.rs  parse_tree.rs  token_cursor.rs
src/tokenizer/: code_cursor.rs  mod.rs  token.rs
src/utils/: mod.rs
